--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "oscript",
             "request": "launch",
             "program": "${file}",
-            "args": ["IPIITC213-00020.yml","test"],
+            "args": ["IPIITC213-00020.yml","batch"],
             "cwd": "${workspaceRoot}",
             "env": {},
             "runtimeExecutable": null,
